--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel="stylesheet" href="css/style.css">
+    <title> HaiZuka - Phan Đức Hải</title>
 </head>
 
 <body>
