--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-
+    <title>HaiZuka Game</title>
  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" integrity="sha256-UzFD2WYH2U1dQpKDjjZK72VtPeWP50NoJjd26rnAdUI=" crossorigin="anonymous" />
 
@@ -48,7 +48,7 @@
                                 <ul>
                                     <li><a href="#">Home</a></li>
                                     <li><a href="#">Game</a></li>
-                                    <li><a href="#">Contact</a></li>
+                                    <li><a href="https://www.facebook.com/chiatayde/">Contact</a></li>
                                 </ul>
 
                                 <!-- Login/Register & Cart Button -->
