Update game pacman

--- a/index.html
+++ b/index.html
@@ -94,6 +94,18 @@
 
             <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
                 <div class="single-album">
+                    <a href="https://zukahai.github.io/Pacman-Game/" target="_blank">
+                        <img src="img/bg-img/Pacman.jpg" alt="">
+                        <div class="album-info">
+                        <h5>Pacman</h5>
+                    </a>
+                    <p>HaiZuka</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
+                <div class="single-album">
                     <a href="https://zukahai.github.io/H5-canvas/" target="_blank">
                         <img src="img/bg-img/snake.jpg" alt="">
                         <div class="album-info">
