Add game HaNoi Tower

--- a/index.html
+++ b/index.html
@@ -82,6 +82,18 @@
 
             <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
                 <div class="single-album">
+                    <a href="https://zukahai.github.io/Hanoi-Towers/" target="_blank">
+                        <img src="img/bg-img/HanoiTowers.jpg" alt="">
+                        <div class="album-info">
+                        <h5>Hanoi Tower</h5>
+                    </a>
+                    <p>HaiZuka</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
+                <div class="single-album">
                     <a href="https://zukahai.github.io/Shoot-number-ball-game/" target="_blank">
                         <img src="img/bg-img/shootNumberBall.jpg" alt="">
                         <div class="album-info">
