--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <nav class="classy-navbar justify-content-between" id="oneMusicNav">
 
                         <!-- Nav brand -->
-                        <a href="#" class="nav-brand"><img src="img/core-img/logo.png" alt=""></a>
+                        <a href="https://github.com/zukahai" target="_blank" class="nav-brand"><img src="img/core-img/logo.png" alt=""></a>
 
                         <!-- Navbar Toggler -->
                         <div class="classy-navbar-toggler">
@@ -48,7 +48,7 @@
                                 <ul>
                                     <li><a href="#">Home</a></li>
                                     <li><a href="#">Game</a></li>
-                                    <li><a href="https://www.facebook.com/chiatayde/">Contact</a></li>
+                                    <li><a target="_blank" href="https://www.facebook.com/chiatayde/">Contact</a></li>
                                 </ul>
 
                                 <!-- Login/Register & Cart Button -->
