--- a/index.html
+++ b/index.html
@@ -94,21 +94,8 @@
 
             <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
                 <div class="single-album">
-                    <a href="https://zukahai.github.io/H5-canvas/" target="_blank">
-                        <img src="img/bg-img/snake.jpg" alt="">
-                        <div class="album-info">
-                        <h5>Snake Game</h5>
-                    </a>
-                    <p>HaiZuka</p>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
-                <div class="single-album">
                     <a href="https://zukahai.github.io/Gold-Miner-Game/" target="_blank">
-                        <img src="img/bg-img/goldMiner.jpg" alt="">
+                        <img src="img/bg-img/goldMiner.png" alt="">
                         <div class="album-info">
                         <h5>Gold Miner</h5>
                     </a>
@@ -147,6 +134,18 @@
                         <img src="img/bg-img/picture-pulzz.jpg" alt="">
                         <div class="album-info">
                         <h5>Picture Puzzle</h5>
+                    </a>
+                    <p>HaiZuka</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
+                <div class="single-album">
+                    <a href="https://zukahai.github.io/H5-canvas/" target="_blank">
+                        <img src="img/bg-img/snake.jpg" alt="">
+                        <div class="album-info">
+                        <h5>Snake Game</h5>
                     </a>
                     <p>HaiZuka</p>
                     </div>
