--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
         </div>
     </header>
-    <section class="breadcumb-area bg-img bg-overlay" style="background-image: url(img/bg-img/breadcumb.jpg);">
+    <section class="breadcumb-area bg-img bg-overlay" style="background-image: url(img/bg-img/bg.gif);">
         <div class="bradcumbContent">
             <p>HaiZuka</p>
             <h2>List Game</h2>
