--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
                 <div class="single-album">
                     <a href="https://zukahai.github.io/Shoot-number-ball-game/" target="_blank">
-                        <img src="img/bg-img/shootNumberBall.jpg" alt="">
+                        <img src="img/bg-img/shootNumberBall.png" alt="">
                         <div class="album-info">
                         <h5>Shoot Number Ball</h5>
                     </a>
