--- a/index.html
+++ b/index.html
@@ -152,6 +152,258 @@
                 </div>
             </div>
 
+            <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
+                <div class="single-album">
+                    <a href="#" target="_blank">
+                        <img src="img/bg-img/comingsoon.png" alt="">
+                        <div class="album-info">
+                        <h5>Coming Soon</h5>
+                    </a>
+                    <p>HaiZuka</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
+                <div class="single-album">
+                    <a href="#" target="_blank">
+                        <img src="img/bg-img/comingsoon.png" alt="">
+                        <div class="album-info">
+                        <h5>Coming Soon</h5>
+                    </a>
+                    <p>HaiZuka</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
+                <div class="single-album">
+                    <a href="#" target="_blank">
+                        <img src="img/bg-img/comingsoon.png" alt="">
+                        <div class="album-info">
+                        <h5>Coming Soon</h5>
+                    </a>
+                    <p>HaiZuka</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
+                <div class="single-album">
+                    <a href="#" target="_blank">
+                        <img src="img/bg-img/comingsoon.png" alt="">
+                        <div class="album-info">
+                        <h5>Coming Soon</h5>
+                    </a>
+                    <p>HaiZuka</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
+                <div class="single-album">
+                    <a href="#" target="_blank">
+                        <img src="img/bg-img/comingsoon.png" alt="">
+                        <div class="album-info">
+                        <h5>Coming Soon</h5>
+                    </a>
+                    <p>HaiZuka</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
+                <div class="single-album">
+                    <a href="#" target="_blank">
+                        <img src="img/bg-img/comingsoon.png" alt="">
+                        <div class="album-info">
+                        <h5>Coming Soon</h5>
+                    </a>
+                    <p>HaiZuka</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
+                <div class="single-album">
+                    <a href="#" target="_blank">
+                        <img src="img/bg-img/comingsoon.png" alt="">
+                        <div class="album-info">
+                        <h5>Coming Soon</h5>
+                    </a>
+                    <p>HaiZuka</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
+                <div class="single-album">
+                    <a href="#" target="_blank">
+                        <img src="img/bg-img/comingsoon.png" alt="">
+                        <div class="album-info">
+                        <h5>Coming Soon</h5>
+                    </a>
+                    <p>HaiZuka</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
+                <div class="single-album">
+                    <a href="#" target="_blank">
+                        <img src="img/bg-img/comingsoon.png" alt="">
+                        <div class="album-info">
+                        <h5>Coming Soon</h5>
+                    </a>
+                    <p>HaiZuka</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
+                <div class="single-album">
+                    <a href="#" target="_blank">
+                        <img src="img/bg-img/comingsoon.png" alt="">
+                        <div class="album-info">
+                        <h5>Coming Soon</h5>
+                    </a>
+                    <p>HaiZuka</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
+                <div class="single-album">
+                    <a href="#" target="_blank">
+                        <img src="img/bg-img/comingsoon.png" alt="">
+                        <div class="album-info">
+                        <h5>Coming Soon</h5>
+                    </a>
+                    <p>HaiZuka</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
+                <div class="single-album">
+                    <a href="#" target="_blank">
+                        <img src="img/bg-img/comingsoon.png" alt="">
+                        <div class="album-info">
+                        <h5>Coming Soon</h5>
+                    </a>
+                    <p>HaiZuka</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
+                <div class="single-album">
+                    <a href="#" target="_blank">
+                        <img src="img/bg-img/comingsoon.png" alt="">
+                        <div class="album-info">
+                        <h5>Coming Soon</h5>
+                    </a>
+                    <p>HaiZuka</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
+                <div class="single-album">
+                    <a href="#" target="_blank">
+                        <img src="img/bg-img/comingsoon.png" alt="">
+                        <div class="album-info">
+                        <h5>Coming Soon</h5>
+                    </a>
+                    <p>HaiZuka</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
+                <div class="single-album">
+                    <a href="#" target="_blank">
+                        <img src="img/bg-img/comingsoon.png" alt="">
+                        <div class="album-info">
+                        <h5>Coming Soon</h5>
+                    </a>
+                    <p>HaiZuka</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
+                <div class="single-album">
+                    <a href="#" target="_blank">
+                        <img src="img/bg-img/comingsoon.png" alt="">
+                        <div class="album-info">
+                        <h5>Coming Soon</h5>
+                    </a>
+                    <p>HaiZuka</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
+                <div class="single-album">
+                    <a href="#" target="_blank">
+                        <img src="img/bg-img/comingsoon.png" alt="">
+                        <div class="album-info">
+                        <h5>Coming Soon</h5>
+                    </a>
+                    <p>HaiZuka</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
+                <div class="single-album">
+                    <a href="#" target="_blank">
+                        <img src="img/bg-img/comingsoon.png" alt="">
+                        <div class="album-info">
+                        <h5>Coming Soon</h5>
+                    </a>
+                    <p>HaiZuka</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
+                <div class="single-album">
+                    <a href="#" target="_blank">
+                        <img src="img/bg-img/comingsoon.png" alt="">
+                        <div class="album-info">
+                        <h5>Coming Soon</h5>
+                    </a>
+                    <p>HaiZuka</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
+                <div class="single-album">
+                    <a href="#" target="_blank">
+                        <img src="img/bg-img/comingsoon.png" alt="">
+                        <div class="album-info">
+                        <h5>Coming Soon</h5>
+                    </a>
+                    <p>HaiZuka</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
+                <div class="single-album">
+                    <a href="#" target="_blank">
+                        <img src="img/bg-img/comingsoon.png" alt="">
+                        <div class="album-info">
+                        <h5>Coming Soon</h5>
+                    </a>
+                    <p>HaiZuka</p>
+                    </div>
+                </div>
+            </div>
+
     </section>
     <footer class="footer-area">
         <div class="container">
