--- a/index.html
+++ b/index.html
@@ -82,6 +82,18 @@
 
             <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
                 <div class="single-album">
+                    <a href="#https://zukahai.github.io/Line98-Game/" target="_blank">
+                        <img src="img/bg-img/line98.jpg" alt="">
+                        <div class="album-info">
+                        <h5>Line 98</h5>
+                    </a>
+                    <p>HaiZuka</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
+                <div class="single-album">
                     <a href="https://zukahai.github.io/Pacman-Game/" target="_blank">
                         <img src="img/bg-img/Pacman.jpg" alt="">
                         <div class="album-info">
@@ -146,18 +158,6 @@
                         <img src="img/bg-img/snake.jpg" alt="">
                         <div class="album-info">
                         <h5>Snake Game</h5>
-                    </a>
-                    <p>HaiZuka</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
-                <div class="single-album">
-                    <a href="#" target="_blank">
-                        <img src="img/bg-img/comingsoon.png" alt="">
-                        <div class="album-info">
-                        <h5>Coming Soon</h5>
                     </a>
                     <p>HaiZuka</p>
                     </div>
