--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
             <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
                 <div class="single-album">
-                    <a href="#https://zukahai.github.io/Line98-Game/" target="_blank">
+                    <a href="https://zukahai.github.io/Line98-Game/" target="_blank">
                         <img src="img/bg-img/line98.jpg" alt="">
                         <div class="album-info">
                         <h5>Line 98</h5>
