--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
                 <div class="single-album">
                     <a href="https://zukahai.github.io/Pacman-Game/" target="_blank">
-                        <img src="img/bg-img/Pacman.jpg" alt="">
+                        <img src="img/bg-img/Pacman.png" alt="">
                         <div class="album-info">
                         <h5>Pacman</h5>
                     </a>
