Update game shoot virus

--- a/index.html
+++ b/index.html
@@ -83,6 +83,18 @@
 
             <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
                 <div class="single-album">
+                    <a href="https://zukahai.github.io/Shoot-Virus/" target="_blank">
+                        <img src="img/bg-img/shootVirus.png" alt="">
+                        <div class="album-info">
+                        <h5>Shoot Virus</h5>
+                    </a>
+                    <p>HaiZuka</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
+                <div class="single-album">
                     <a href="https://zukahai.github.io/Line98-Game/" target="_blank">
                         <img src="img/bg-img/line98.jpg" alt="">
                         <div class="album-info">
