--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                                 </ul>
                                 <div class="login-register-cart-button d-flex align-items-center">
                                     <div class="login-register-btn mr-50">
-                                        <a href="#" id="loginBtn">Login / Register</a>
+                                        <a href="#" id="loginBtn">HaiZuka</a>
                                     </div>
                                 </div>
                             </div>
@@ -60,7 +60,7 @@
             <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
                 <div class="single-album">
                     <a href="https://zukahai.github.io/Hanoi-Towers/" target="_blank">
-                        <img src="img/bg-img/HanoiTowers.jpg" alt="">
+                        <img src="img/bg-img/HanoiTowers.png" alt="">
                         <div class="album-info">
                         <h5>Hanoi Tower</h5>
                     </a>
