--- a/index.html
+++ b/index.html
@@ -54,20 +54,20 @@
         </div>
     </section>
 
-    <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
-        <div class="single-album">
-            <a href="https://zukahai.github.io/Sokoban/" target="_blank">
-                <img src="img/bg-img/sokoban.png" alt="">
-                <div class="album-info">
-                <h5>Sokoban</h5>
-            </a>
-            <p>HaiZuka</p>
-            </div>
-        </div>
-    </div>
-
     <section class="album-catagory section-padding-100-0" style="margin-top: -110px;">
         <div id="myUL">
+
+            <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
+                <div class="single-album">
+                    <a href="https://zukahai.github.io/Sokoban/" target="_blank">
+                        <img src="img/bg-img/sokoban.png" alt="">
+                        <div class="album-info">
+                        <h5>Sokoban</h5>
+                    </a>
+                    <p>HaiZuka</p>
+                    </div>
+                </div>
+            </div>
 
             <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
                 <div class="single-album">
@@ -144,7 +144,7 @@
             <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
                 <div class="single-album">
                     <a href="https://zukahai.github.io/Among-US/" target="_blank">
-                        <img src="img/bg-img/AmongUS.jpg" alt="">
+                        <img src="img/bg-img/AmongUS.png" alt="">
                         <div class="album-info">
                         <h5>Among US</h5>
                     </a>
@@ -156,7 +156,7 @@
             <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
                 <div class="single-album">
                     <a href="https://zukahai.github.io/Throwing-Knife-Game/" target="_blank">
-                        <img src="img/bg-img/Throwing-Knife-Game.jpg" alt="">
+                        <img src="img/bg-img/Throwing-Knife-Game.png" alt="">
                         <div class="album-info">
                         <h5>Throwing Knife Game</h5>
                     </a>
@@ -168,7 +168,7 @@
             <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
                 <div class="single-album">
                     <a href="https://zukahai.github.io/Picture-Puzzle-Html5/" target="_blank">
-                        <img src="img/bg-img/picture-pulzz.jpg" alt="">
+                        <img src="img/bg-img/picture-pulzz.png" alt="">
                         <div class="album-info">
                         <h5>Picture Puzzle</h5>
                     </a>
@@ -180,7 +180,7 @@
             <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
                 <div class="single-album">
                     <a href="https://zukahai.github.io/H5-canvas/" target="_blank">
-                        <img src="img/bg-img/snake.jpg" alt="">
+                        <img src="img/bg-img/snake.png" alt="">
                         <div class="album-info">
                         <h5>Snake Game</h5>
                     </a>
