--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                                     <li><a href="#">Home</a></li>
                                     <li><a href="#">Game</a></li>
                                     <li><a target="_blank" href="https://www.facebook.com/chiatayde/">Contact</a></li>
+                                    <li><a target="_blank" href="https://codelearn.io/sharing/post/HaiZuka/">Blog</a></li>
                                 </ul>
                                 <div class="login-register-cart-button d-flex align-items-center">
                                     <div class="login-register-btn mr-50">
