--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="classy-nav-container breakpoint-off">
                 <div class="container">
                     <nav class="classy-navbar justify-content-between" id="oneMusicNav">
-                        <a href="https://github.com/zukahai" target="_blank" class="nav-brand"><img src="img/core-img/logo.png" alt=""></a>
+                        <a href="#" target="_blank" class="nav-brand"><img src="img/core-img/logo.png" alt=""></a>
                         <div class="classy-navbar-toggler">
                             <span class="navbarToggler"><span></span><span></span><span></span></span>
                         </div>
@@ -32,7 +32,7 @@
                             <div class="classynav">
                                 <ul>
                                     <li><a href="#">Home</a></li>
-                                    <li><a href="#">Game</a></li>
+                                    <li><a target="_blank" href="https://github.com/zukahai">Github</a></li>
                                     <li><a target="_blank" href="https://www.facebook.com/chiatayde/">Contact</a></li>
                                     <li><a target="_blank" href="https://codelearn.io/sharing/post/HaiZuka/">Blog</a></li>
                                 </ul>
