--- a/index.html
+++ b/index.html
@@ -72,6 +72,18 @@
 
             <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
                 <div class="single-album">
+                    <a href="https://zukahai.github.io/Slither.io/" target="_blank">
+                        <img src="img/bg-img/slither.io.png" alt="">
+                        <div class="album-info">
+                        <h5>Slither.io</h5>
+                    </a>
+                    <p>HaiZuka</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-4 col-md-3 col-lg-2 single-album-item t m s">
+                <div class="single-album">
                     <a href="https://zukahai.github.io/Hanoi-Towers/" target="_blank">
                         <img src="img/bg-img/HanoiTowers.png" alt="">
                         <div class="album-info">
