--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" href="images/logo.png" />
-    <title>HaiZuka Game</title>
- 
+    <title>HaiZuka Games</title>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" integrity="sha256-UzFD2WYH2U1dQpKDjjZK72VtPeWP50NoJjd26rnAdUI=" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="test.css">
@@ -63,7 +63,7 @@
                     <a href="https://zukahai.github.io/Sokoban/" target="_blank">
                         <img src="img/bg-img/sokoban.png" alt="">
                         <div class="album-info">
-                        <h5>Sokoban</h5>
+                            <h5>Sokoban</h5>
                     </a>
                     <p>HaiZuka</p>
                     </div>
@@ -75,7 +75,7 @@
                     <a href="https://zukahai.github.io/Slither.io/" target="_blank">
                         <img src="img/bg-img/slither.io.png" alt="">
                         <div class="album-info">
-                        <h5>Slither.io</h5>
+                            <h5>Slither.io</h5>
                     </a>
                     <p>HaiZuka</p>
                     </div>
@@ -87,7 +87,7 @@
                     <a href="https://zukahai.github.io/Hanoi-Towers/" target="_blank">
                         <img src="img/bg-img/HanoiTowers.png" alt="">
                         <div class="album-info">
-                        <h5>Hanoi Tower</h5>
+                            <h5>Hanoi Tower</h5>
                     </a>
                     <p>HaiZuka</p>
                     </div>
@@ -99,7 +99,7 @@
                     <a href="https://zukahai.github.io/Shoot-number-ball-game/" target="_blank">
                         <img src="img/bg-img/shootNumberBall.png" alt="">
                         <div class="album-info">
-                        <h5>Shoot Number Ball</h5>
+                            <h5>Shoot Number Ball</h5>
                     </a>
                     <p>HaiZuka</p>
                     </div>
@@ -111,7 +111,7 @@
                     <a href="https://zukahai.github.io/Shoot-Virus/" target="_blank">
                         <img src="img/bg-img/shootVirus.png" alt="">
                         <div class="album-info">
-                        <h5>Shoot Virus</h5>
+                            <h5>Shoot Virus</h5>
                     </a>
                     <p>HaiZuka</p>
                     </div>
@@ -123,7 +123,7 @@
                     <a href="https://zukahai.github.io/Line98-Game/" target="_blank">
                         <img src="img/bg-img/line98.png" alt="">
                         <div class="album-info">
-                        <h5>Line 98</h5>
+                            <h5>Line 98</h5>
                     </a>
                     <p>HaiZuka</p>
                     </div>
@@ -135,7 +135,7 @@
                     <a href="https://zukahai.github.io/Fill-Maze-Game/" target="_blank">
                         <img src="img/bg-img/fill-maze.png" alt="">
                         <div class="album-info">
-                        <h5>Fill MaZe</h5>
+                            <h5>Fill MaZe</h5>
                     </a>
                     <p>HaiZuka</p>
                     </div>
@@ -147,7 +147,7 @@
                     <a href="https://zukahai.github.io/Pacman-Game/" target="_blank">
                         <img src="img/bg-img/Pacman.png" alt="">
                         <div class="album-info">
-                        <h5>Pacman</h5>
+                            <h5>Pacman</h5>
                     </a>
                     <p>HaiZuka</p>
                     </div>
@@ -159,7 +159,7 @@
                     <a href="https://zukahai.github.io/Gold-Miner-Game/" target="_blank">
                         <img src="img/bg-img/goldMiner.png" alt="">
                         <div class="album-info">
-                        <h5>Gold Miner</h5>
+                            <h5>Gold Miner</h5>
                     </a>
                     <p>HaiZuka</p>
                     </div>
@@ -171,7 +171,7 @@
                     <a href="https://zukahai.github.io/Among-US/" target="_blank">
                         <img src="img/bg-img/AmongUS.png" alt="">
                         <div class="album-info">
-                        <h5>Among US</h5>
+                            <h5>Among US</h5>
                     </a>
                     <p>HaiZuka</p>
                     </div>
@@ -183,7 +183,7 @@
                     <a href="https://zukahai.github.io/Throwing-Knife-Game/" target="_blank">
                         <img src="img/bg-img/Throwing-Knife-Game.png" alt="">
                         <div class="album-info">
-                        <h5>Throwing Knife Game</h5>
+                            <h5>Throwing Knife Game</h5>
                     </a>
                     <p>HaiZuka</p>
                     </div>
@@ -195,7 +195,7 @@
                     <a href="https://zukahai.github.io/Picture-Puzzle-Html5/" target="_blank">
                         <img src="img/bg-img/picture-pulzz.png" alt="">
                         <div class="album-info">
-                        <h5>Picture Puzzle</h5>
+                            <h5>Picture Puzzle</h5>
                     </a>
                     <p>HaiZuka</p>
                     </div>
@@ -207,7 +207,7 @@
                     <a href="https://zukahai.github.io/H5-canvas/" target="_blank">
                         <img src="img/bg-img/snake.png" alt="">
                         <div class="album-info">
-                        <h5>Snake Game</h5>
+                            <h5>Snake Game</h5>
                     </a>
                     <p>HaiZuka</p>
                     </div>
@@ -219,7 +219,7 @@
                     <a href="#" target="_blank">
                         <img src="img/bg-img/comingsoon.png" alt="">
                         <div class="album-info">
-                        <h5>Coming Soon</h5>
+                            <h5>Coming Soon</h5>
                     </a>
                     <p>HaiZuka</p>
                     </div>
@@ -231,7 +231,7 @@
                     <a href="#" target="_blank">
                         <img src="img/bg-img/comingsoon.png" alt="">
                         <div class="album-info">
-                        <h5>Coming Soon</h5>
+                            <h5>Coming Soon</h5>
                     </a>
                     <p>HaiZuka</p>
                     </div>
@@ -243,7 +243,7 @@
                     <a href="#" target="_blank">
                         <img src="img/bg-img/comingsoon.png" alt="">
                         <div class="album-info">
-                        <h5>Coming Soon</h5>
+                            <h5>Coming Soon</h5>
                     </a>
                     <p>HaiZuka</p>
                     </div>
@@ -255,7 +255,7 @@
                     <a href="#" target="_blank">
                         <img src="img/bg-img/comingsoon.png" alt="">
                         <div class="album-info">
-                        <h5>Coming Soon</h5>
+                            <h5>Coming Soon</h5>
                     </a>
                     <p>HaiZuka</p>
                     </div>
@@ -267,7 +267,7 @@
                     <a href="#" target="_blank">
                         <img src="img/bg-img/comingsoon.png" alt="">
                         <div class="album-info">
-                        <h5>Coming Soon</h5>
+                            <h5>Coming Soon</h5>
                     </a>
                     <p>HaiZuka</p>
                     </div>
@@ -279,7 +279,7 @@
                     <a href="#" target="_blank">
                         <img src="img/bg-img/comingsoon.png" alt="">
                         <div class="album-info">
-                        <h5>Coming Soon</h5>
+                            <h5>Coming Soon</h5>
                     </a>
                     <p>HaiZuka</p>
                     </div>
@@ -291,7 +291,7 @@
                     <a href="#" target="_blank">
                         <img src="img/bg-img/comingsoon.png" alt="">
                         <div class="album-info">
-                        <h5>Coming Soon</h5>
+                            <h5>Coming Soon</h5>
                     </a>
                     <p>HaiZuka</p>
                     </div>
@@ -303,7 +303,7 @@
                     <a href="#" target="_blank">
                         <img src="img/bg-img/comingsoon.png" alt="">
                         <div class="album-info">
-                        <h5>Coming Soon</h5>
+                            <h5>Coming Soon</h5>
                     </a>
                     <p>HaiZuka</p>
                     </div>
@@ -315,7 +315,7 @@
                     <a href="#" target="_blank">
                         <img src="img/bg-img/comingsoon.png" alt="">
                         <div class="album-info">
-                        <h5>Coming Soon</h5>
+                            <h5>Coming Soon</h5>
                     </a>
                     <p>HaiZuka</p>
                     </div>
@@ -327,7 +327,7 @@
                     <a href="#" target="_blank">
                         <img src="img/bg-img/comingsoon.png" alt="">
                         <div class="album-info">
-                        <h5>Coming Soon</h5>
+                            <h5>Coming Soon</h5>
                     </a>
                     <p>HaiZuka</p>
                     </div>
@@ -339,7 +339,7 @@
                     <a href="#" target="_blank">
                         <img src="img/bg-img/comingsoon.png" alt="">
                         <div class="album-info">
-                        <h5>Coming Soon</h5>
+                            <h5>Coming Soon</h5>
                     </a>
                     <p>HaiZuka</p>
                     </div>
@@ -351,7 +351,7 @@
                     <a href="#" target="_blank">
                         <img src="img/bg-img/comingsoon.png" alt="">
                         <div class="album-info">
-                        <h5>Coming Soon</h5>
+                            <h5>Coming Soon</h5>
                     </a>
                     <p>HaiZuka</p>
                     </div>
@@ -363,7 +363,7 @@
                     <a href="#" target="_blank">
                         <img src="img/bg-img/comingsoon.png" alt="">
                         <div class="album-info">
-                        <h5>Coming Soon</h5>
+                            <h5>Coming Soon</h5>
                     </a>
                     <p>HaiZuka</p>
                     </div>
@@ -375,7 +375,7 @@
                     <a href="#" target="_blank">
                         <img src="img/bg-img/comingsoon.png" alt="">
                         <div class="album-info">
-                        <h5>Coming Soon</h5>
+                            <h5>Coming Soon</h5>
                     </a>
                     <p>HaiZuka</p>
                     </div>
@@ -387,7 +387,7 @@
                     <a href="#" target="_blank">
                         <img src="img/bg-img/comingsoon.png" alt="">
                         <div class="album-info">
-                        <h5>Coming Soon</h5>
+                            <h5>Coming Soon</h5>
                     </a>
                     <p>HaiZuka</p>
                     </div>
@@ -399,7 +399,7 @@
                     <a href="#" target="_blank">
                         <img src="img/bg-img/comingsoon.png" alt="">
                         <div class="album-info">
-                        <h5>Coming Soon</h5>
+                            <h5>Coming Soon</h5>
                     </a>
                     <p>HaiZuka</p>
                     </div>
@@ -411,7 +411,7 @@
                     <a href="#" target="_blank">
                         <img src="img/bg-img/comingsoon.png" alt="">
                         <div class="album-info">
-                        <h5>Coming Soon</h5>
+                            <h5>Coming Soon</h5>
                     </a>
                     <p>HaiZuka</p>
                     </div>
@@ -423,7 +423,7 @@
                     <a href="#" target="_blank">
                         <img src="img/bg-img/comingsoon.png" alt="">
                         <div class="album-info">
-                        <h5>Coming Soon</h5>
+                            <h5>Coming Soon</h5>
                     </a>
                     <p>HaiZuka</p>
                     </div>
@@ -435,7 +435,7 @@
                     <a href="#" target="_blank">
                         <img src="img/bg-img/comingsoon.png" alt="">
                         <div class="album-info">
-                        <h5>Coming Soon</h5>
+                            <h5>Coming Soon</h5>
                     </a>
                     <p>HaiZuka</p>
                     </div>
@@ -454,20 +454,20 @@
             </div>
         </div>
     </footer>
-    
+
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="search.js"></script>
-   
+
     <script src="js/jquery/jquery-2.2.4.min.js"></script>
-   
+
     <script src="js/bootstrap/popper.min.js"></script>
-  
+
     <script src="js/bootstrap/bootstrap.min.js"></script>
-   
+
     <script src="js/plugins/plugins.js"></script>
-  
+
     <script src="js/active.js"></script>
 </body>
 
